[package]
name = "zap"
version = "0.1.0"
edition = "2021"
authors = ["Bentlybro <github@bentlybro.com>"]
description = "⚡ Dead simple E2EE file transfers from your terminal"
license = "MIT"
repository = "https://github.com/Bentlybro/zap"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Progress bars (fallback mode)
indicatif = "0.17"

# Crypto
spake2 = "0.4"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"

# Network
mdns-sd = "0.11"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Hash for code matching
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Archive
tar = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
hex = "0.4"
humantime = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
